[tool.poetry]
name = "guessing_game"
version = "0.0.1"
license = "MIT license"
readme = 'README.md'
description = "A learning project"
authors = ["Jessica Holdcroft"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
]
packages = [
    { include = "game", from = "src" }
]
include = [
    { path = 'tests'},
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.6.4"
flake8 = "^3.8.4"
pylint = "^2.6.0"
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"